# HackyClock

./: .gitignore  Cargo.toml  README.md  config-example.yml  config.yml
src/: config.rs  main.rs
