[package]
name = "hacky-clock"
version = "0.1.0"
authors = ["Asgeir Vinkenes <asgeirv@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
fltk = "0.15.6"

[target.armv7-unknown-linux-gnueabihf]
linker = "arm-linux-gnueabihf-gcc"