[package]
name = "hacky-clock"
version = "0.1.0"
authors = ["Asgeir Vinkenes <asgeirv@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
chrono = "0.4.19"
fltk = "0.15.6"
notify = "4.0.15"
rodio = "0.13.0"
serde = { version = "1.0.124", features = ["derive"] }
serde_yaml = "0.8.17"

[target.armv7-unknown-linux-gnueabihf]
linker = "arm-linux-gnueabihf-gcc"
